# blockchain-monorepo

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
cross-chain-interactions/hyperlane/messages/: Readme.md  tsconfig.json
cross-chain-interactions/hyperlane/messages/backend/: endpoints.rest
cross-chain-interactions/hyperlane/messages/blockchain-service/: package-lock.json  package.json  tsconfig.json
ethereum/mev-relay/: .env  README.md  docker-compose.yml  endpoints.rest  go.mod  go.sum
ethereum/mev-relay/cmd/builder/: main.go
ethereum/mev-relay/cmd/relay/: main.go
ethereum/mev-relay/cmd/simulator/: main.go
ethereum/mev-relay/docker/: Dockerfile.builder  Dockerfile.relay  Dockerfile.simulator  Dockerfile.superset
ethereum/mev-relay/proto/: builder.proto  simulator.proto
ethereum/mev-relay/scripts/: migrate.sql  seed.sql  setup_superset.sh
ethereum/txpool-builder/: .env  Readme.md  go.mod  go.sum
ethereum/txpool-builder/infra/: docker-compose.yml
solana/openrate/: Anchor.toml  Readme.md  package.json
solana/openrate/programs/openrate/: Cargo.toml
solana/openrate/programs/openrate/src/: errors.rs  lib.rs
solana/openrate/programs/openrate/src/instructions/: borrow.rs  cancel_bid.rs  initialize_market.rs  mod.rs  place_bid.rs  repay.rs
solana/openrate/programs/openrate/src/state/: bid_order.rs  borrow_record.rs  market.rs  mod.rs  vault.rs
solana/openrate/tests/: marketInteractions.ts  marketinteractions.ts  openrate.ts
solana/zk_lend/: Anchor.toml
solana/zk_lend/tests/: zk_lend.ts
(+52 files in other folders)
